syntax = "proto3";

option go_package = "monografia/transport/proto";
option java_multiple_files = true;
option java_package = "io.monografia";
option java_outer_classname = "MonografiaProto";

package router;

service Router {
  rpc GetOrderByID (ByIDRequest) returns (Order) {}
  rpc GetOrdersByUserID (ByIDRequest) returns (Orders) {}
  rpc CreateOrder (Order) returns (Order) {}
  rpc AddItem (Item) returns (Order) {}
  rpc RemoveItem (ByIDRequest) returns (Order) {}

  rpc GetAllProducts (EmptyRequest) returns (Products) {}
  rpc GetProductByID (ByIDRequest) returns (Product) {}
  rpc CreateProduct (Product) returns (Product) {}
  rpc DeleteProduct (ByIDRequest) returns (EmptyResponse) {}
}

message EmptyRequest {}
message EmptyResponse {}

message ByIDRequest {
  int64 id = 1;
}

message Product {
  int64 id = 1;
  string name = 2;
  float price = 3;
}

message Products {
  repeated Product products = 1;
}

message Orders {
  repeated Order orders = 1;
}

message Order {
  int64 id = 1;
  int64 user_id = 2;
  int64 items_quantity = 3;
  float price = 4;
  int64 payment_id = 5;
  repeated Item items = 6;
}

message Item {
  int64 id = 1;
  int64 order_id = 2;
  int64 product_id = 3;
  int64 quantity = 4;
  float price = 5;
  Product product = 6;
}
